# minimal-operational-framework

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.circleci/: config.yml
_sources/: index.rst.txt
_sources/development/: testing.md.txt
_sources/organisation/: stakeholders.md.txt
development/: documentation.html  testing.html
docs/source/: conf.py
docs/source/development/: documentation.md  testing.md
docs/source/organisation/: stakeholders.md
organisation/: stakeholders.html
tech/: stack.html  tools.html
