[tool.poetry]
name = "minimal-operational-framework"
version = "0.1.0"
description = ""
authors = ["Matthew Coyle <mattcoyle48@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
furo = "^2023.9.10"
myst-parser = "^2.0.0"


[tool.poetry.group.lint.dependencies]
black = "^24.1.1"
mypy = "^1.8.0"
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
